# vsgCs

./: .clang-tidy  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  INSTALL.md  LICENSE.md  README.md  USAGE.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
CMakeModules/: Fedora41Toolchain.cmake  FindCesium.cmake  FindCesiumNative.cmake  LinuxClangToolchain.cmake  cesiumAliases.cmake  vsgCsMacros.cmake
data/: CMakeLists.txt
data/models/: Credits.md  Credits.md~
data/shaders/: cspoint.vert  csstandard.vert  csstandard_pbr.frag  descriptor_defs.glsl
doc/: ROADMAP.md
src/: CMakeLists.txt  vsgCsConfig.cmake
src/CsApp/: CMakeLists.txt  CreditComponent.cpp  CreditComponent.h  CsViewer.cpp  CsViewer.h  GeneralPerspective.h  IonIconComponent.cpp  IonIconComponent.h  MapManipulator.cpp  MapManipulator.h
src/applications/: CMakeLists.txt
src/applications/csclient/: CMakeLists.txt  UI.cpp  UI.h  csclient.cpp
src/applications/gltfviewer/: CMakeLists.txt  gltfviewer.cpp
src/applications/worldviewer/: CMakeLists.txt  UI.cpp  UI.h  worldviewer.cpp
src/vsgCesium/: CesiumGltfBuilder.cpp  CesiumGltfBuilder.h  LoadGltfResult.h  OpThreadTaskProcessor.cpp  OpThreadTaskProcessor.h  SamplerData.cpp  SamplerData.h  UrlAssetAccessor.cpp  UrlAssetAccessor.h  vsgResourcePreparer.cpp  vsgResourcePreparer.h
src/vsgCs/: CMakeLists.txt  CRS.cpp  CRS.h  CSDebugColorizeTilesOverlay.cpp  CSDebugColorizeTilesOverlay.h  CSOverlay.cpp  CSOverlay.h  CesiumGltfBuilder.cpp  CesiumGltfBuilder.h  CompilableImage.cpp  CompilableImage.h  Config.h.in  CppAllocator.cpp  CppAllocator.h  CsDebugColorizeTilesOverlay.cpp  CsDebugColorizeTilesOverlay.h  CsOverlay.cpp  CsOverlay.h  CsTileMapServiceRasterOverlay.cpp  CsTileMapServiceRasterOverlay.h  CsUrlTemplateRasterOverlay.cpp  CsUrlTemplateRasterOverlay.h  CsView.cpp  CsView.h  CsWebMapServiceRasterOverlay.cpp  CsWebMapServiceRasterOverlay.h  CsWebMapTileServiceRasterOverlay.cpp  CsWebMapTileServiceRasterOverlay.h  DescriptorSetConfigurator.cpp  DescriptorSetConfigurator.h  Export.h  GeoNode.cpp  GeoNode.h  GeospatialServices.cpp  GeospatialServices.h  GltfLoader.cpp  GltfLoader.h  GraphicsEnvironment.cpp  GraphicsEnvironment.h  ImageComponent.cpp  (+41 more)
src/vsgCs/shaders/: csstandard.vert  csstandard_pbr.frag
tests/: GMaps-ion.json  GMaps-sample.json  agi.json  color-debug-overlay.json  csterrain.json  egm96-model.json  ellipsoid.json  melbourne-cloud.json  multilayer.json  multilayer3.json  osm-buildings.json  osm-nooverlay.json  overlay-openrailwaymap.json  overlay-tms.json  overlay-urlTemplate.json  overlay-wms.json  overlay-wmts.json  utm-model.json  wgs84-model.json
